translation-sprint-3-2022: - fix audience

--- a/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
@@ -169,7 +169,7 @@
             </mat-checkbox>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column> <!-- // TODO -->
+        <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column> <!-- // TODO -->
         <ngx-datatable-column
           name="No Ponsel"
           [width]="180"
@@ -183,7 +183,7 @@
           [sortable]="false"
         ></ngx-datatable-column> <!-- // TODO -->
         <ngx-datatable-column
-          name="Retailer Classification"
+          name="{{'call_objective.text10' | translate}}"
           prop="classification"
           [sortable]="false"
         ></ngx-datatable-column>
