--- a/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
+++ b/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
@@ -38,7 +38,7 @@
           <tr>
             <th nowrap>ID</th>
             <th nowrap>Name</th>
-            <th nowrap>Kode</th>
+            <th nowrap>{{'global.label.code' | translate}}</th>
             <th nowrap>Owner</th>
             <th nowrap>Tipe</th>
             <th nowrap>{{ls.locale.global.messages.invalid_reason}}</th>
