--- a/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
+++ b/src/app/pages/notes-retailer/component/create-notes-retailer.component.html
@@ -210,7 +210,7 @@
           ></ngx-datatable-column>
           <!--[R]-->
           <ngx-datatable-column
-            name="Retailer Classification"
+            name="{{'call_objective.text10' | translate}}"
             prop="retail_classification"
           ></ngx-datatable-column>
           <ngx-datatable-column
@@ -223,11 +223,11 @@
           ></ngx-datatable-column>
           <!--[R]-->
           <ngx-datatable-column
-            name="Field Force"
+            name="{{'call_objective.text13' | translate}}"
             prop="ff_name"
             [sortable]="false"
           ></ngx-datatable-column>
-          <ngx-datatable-column name="Daftar Ayo" prop="status">
+          <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="status">
             <ng-template
               ngx-datatable-cell-template
               let-row="row"
