--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -928,7 +928,7 @@
       </div>
       <!-- </mat-tab> -->
       <!-- <mat-tab label="User Log"> -->
-      <!-- <detail-penjual *ngIf="selectedTab === 1"></detail-penjual> -->
+      <!-- <detail-{{'call_objective.text8' | translate}} *ngIf="selectedTab === 1"></detail-{{'call_objective.text8' | translate}}> -->
       <!-- <admin-principal-audit-log *ngIf="selectedTab === 1"></admin-principal-audit-log> -->
       <!-- </mat-tab> -->
       <!-- </mat-tab-group> -->
