--- a/src/app/pages/virtual-account/virtual-account-panel/virtual-account-panel-import-dialog/virtual-account-panel-import-dialog.component.html
+++ b/src/app/pages/virtual-account/virtual-account-panel/virtual-account-panel-import-dialog/virtual-account-panel-import-dialog.component.html
@@ -36,7 +36,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th nowrap>Penjual</th>
+            <th nowrap>{{'call_objective.text8' | translate}}</th>
             <th nowrap *ngIf="dialogData.type === 'wholesaler'">No. Rekening</th>
             <th nowrap>No. Ponsel</th>
             <th nowrap>Kode</th>
