--- a/src/app/pages/call-objective/component/create-call-objective.component.html
+++ b/src/app/pages/call-objective/component/create-call-objective.component.html
@@ -93,7 +93,7 @@
           (click)="loadFormFilter()"
           fxFlex="20"
         >
-          Load Data
+          {{'dte.template_tugas.text24' | translate}}
         </button>
       </div>
       <form [formGroup]="formFilter" autoComplete="off">
@@ -227,7 +227,7 @@
               <!--[R]-->
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select
-                  placeholder="Retail Classification"
+                  placeholder="{{'dte.audience.text13' | translate}}"
                   formControlName="retail_classification"
                 >
                   <mat-option
@@ -240,7 +240,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select
-                  placeholder="SRC Classification"
+                  placeholder="{{'dte.audience.text14' | translate}}"
                   formControlName="src_classification"
                 >
                   <mat-option
@@ -253,7 +253,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select
-                  placeholder="SRC Type"
+                  placeholder="{{'dte.audience.text15' | translate}}"
                   formControlName="src_type"
                 >
                   <mat-option
@@ -376,20 +376,20 @@
           ></ngx-datatable-column>
           <!--[R]-->
           <ngx-datatable-column
-            name="Retailer Classification"
+            name="{{'call_objective.text10' | translate}}"
             prop="retail_classification"
           ></ngx-datatable-column>
           <ngx-datatable-column
-            name="SRC Classification"
+            name="{{'dte.audience.text14' | translate}}"
             prop="src_classification"
           ></ngx-datatable-column>
           <ngx-datatable-column
-            name="SRC Type"
+            name="{{'dte.audience.text15' | translate}}"
             prop="src_type"
           ></ngx-datatable-column>
           <!--[R]-->
           <ngx-datatable-column
-            name="Field Force"
+            name="{{'call_objective.text13' | translate}}"
             prop="ff_name"
             [sortable]="false"
           ></ngx-datatable-column>
