--- a/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
+++ b/src/app/pages/dte/audience/import/personalize/import-audience-personalize.component.html
@@ -44,7 +44,7 @@
     <div class="responsive" *ngIf="!requestingPreview">
       <ngx-datatable [rowClass]="getRowClass" class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="onPageChange($event)">
 
-        <ngx-datatable-column name="Penjual" prop="name">
+        <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-rowIndex="rowIndex">
             {{ row.name }}
           </ng-template>
@@ -56,7 +56,7 @@
           </ng-template>
         </ngx-datatable-column> -->
 
-        <ngx-datatable-column name="Kode" prop="code">
+        <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.code }}
           </ng-template>
@@ -68,13 +68,13 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Field Force" prop="ff_name">
+        <ngx-datatable-column name="{{'call_objective.text13' | translate}}" prop="ff_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.ff_name }}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Daftar Ayo" prop="registered">
+        <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="registered">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.registered }}
           </ng-template>
@@ -114,7 +114,7 @@
         <button type="button" mat-raised-button color="primary" (click)="submit()"
           [disabled]="rows.length === 0 || requestingPreview || importing || requestingImport || invalidData">{{ls.locale.global.button.send}}</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-          [disabled]="uploading">Batal</button>
+          [disabled]="uploading">{{'global.button.cancel' | translate}}</button>
       </div>
     </div>
   </div>
