--- a/src/app/pages/dte/automation/createtsm/e-ordertsm/e-ordertsm.component.html
+++ b/src/app/pages/dte/automation/createtsm/e-ordertsm/e-ordertsm.component.html
@@ -28,10 +28,10 @@
 
             <div fxLayout="row">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <input matInput type="text" formControlName="audienceName" placeholder="Nama Grup">
+                <input matInput type="text" formControlName="audienceName" placeholder="{{'dte.audience.text4' | translate }}">
                 <mat-error
                   *ngIf="formEOrder.controls['audienceName'].hasError('required') && formEOrder.controls['audienceName'].touched">
-                  Nama Grup harus diisi
+                  {{'dte.audience.text4' | translate }} harus diisi
                 </mat-error>
               </mat-form-field>
             </div>
@@ -47,24 +47,24 @@
             <div *ngIf="formEOrder.get('type').value === 'limit'" fxLayout="row wrap" fxLayout.lt-md="column"
               class="py-16" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="number" min="0" placeholder="Audience Minimal" formControlName="min" numericOnly>
+                <input matInput type="number" min="0" placeholder="{{'dte.audience.text9' | translate }}" formControlName="min" numericOnly>
                 <mat-error
                   *ngIf="formEOrder.controls['min'].hasError('required') && formEOrder.controls['min'].touched">
-                  Audience Minimal harus diisi
+                  {{'dte.audience.text9' | translate }} harus diisi
                 </mat-error>
                 <mat-error *ngIf="formEOrder.controls['min'].hasError('min') && formEOrder.controls['min'].touched">
-                  Audience Minimal tidak boleh kurang dari 0
+                  {{'dte.audience.text9' | translate }} tidak boleh kurang dari 0
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="45%" class="is-light form-primary">
-                <input matInput type="number" min="0" placeholder="Audience Maksimal" formControlName="max" numericOnly>
+                <input matInput type="number" min="0" placeholder="{{'dte.audience.text10' | translate }}" formControlName="max" numericOnly>
                 <mat-error
                   *ngIf="formEOrder.controls['max'].hasError('required') && formEOrder.controls['max'].touched">
-                  Audience Maksimal harus diisi
+                  {{'dte.audience.text10' | translate }} harus diisi
                 </mat-error>
                 <mat-error *ngIf="formEOrder.controls['max'].hasError('min') && formEOrder.controls['max'].touched">
-                  Audience maksimal tidak boleh kurang dari jumlah minimal audience
+                  {{'dte.audience.text10' | translate }} tidak boleh kurang dari jumlah minimal audience
                 </mat-error>
               </mat-form-field>
             </div>
@@ -160,12 +160,12 @@
               (change)="onCheckboxChangeFn($event)"></mat-checkbox>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column>
         <ngx-datatable-column name="No Ponsel" [width]="180" prop="phone" [sortable]="false"></ngx-datatable-column>
-        <ngx-datatable-column name="Kode" prop="code"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code"></ngx-datatable-column>
         <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
-        <ngx-datatable-column name="Field Force" prop="ff_name" [sortable]="false"></ngx-datatable-column>
-        <ngx-datatable-column name="Daftar Ayo" prop="status">
+        <ngx-datatable-column name="{{'call_objective.text13' | translate}}" prop="ff_name" [sortable]="false"></ngx-datatable-column>
+        <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span *ngIf="row.status === 'active' || row.status === 'inactive'">Yes</span>
             <span *ngIf="row.status === 'not-registered'">No</span>
@@ -247,8 +247,8 @@
       <div fxLayout="row">
         <mat-form-field fxFlex="45" class="is-light form-primary">
           <mat-select placeholder="{{'dte.dte_automation.text8' | translate}}" #singleSelectTradeProgram formControlName="trade_program_id">
-            <ngx-mat-select-search [formControl]="filterTradeProgram" [placeholderLabel]="'Cari Trade Program...'"
-              [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'"></ngx-mat-select-search>
+            <ngx-mat-select-search [formControl]="filterTradeProgram" placeholderLabel="{{'global.label.search' | translate}}"
+              noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
             <mat-option *ngFor="let item of filteredTradeProgram | async" [value]="item.id">
               {{item.name}}
             </mat-option>
