--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -102,7 +102,7 @@
               fxLayoutGap="20px" fxLayoutGap.lt-md="0px" *ngIf="isTargetedRetailer.value === true">
               <button mat-raised-button type="button" class="confirmation-button" (click)="loadFormFilter()"
                 fxFlex="20">
-                Load Data
+                {{'dte.template_tugas.text24' | translate}}
               </button>
             </div>
             <form [formGroup]="formFilter" autoComplete="off">
@@ -176,21 +176,21 @@
                 fxLayoutGap="20px" fxLayoutGap.lt-md="0px" *ngIf="isTargetedRetailer.value === true">
                 <!--[R]-->
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="Retail Classification" formControlName="retail_classification">
+                  <mat-select placeholder="{{'dte.audience.text13' | translate}}" formControlName="retail_classification">
                     <mat-option *ngFor="let item of retailClassification" [value]="item.value">
                       {{item.name}}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="SRC Classification" formControlName="src_classification">
+                  <mat-select placeholder="{{'dte.audience.text14' | translate}}" formControlName="src_classification">
                     <mat-option *ngFor="let item of srcClassification" [value]="item.value">
                       {{item.name}}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
-                  <mat-select placeholder="SRC Type" formControlName="src_type">
+                  <mat-select placeholder="{{'dte.audience.text15' | translate}}" formControlName="src_type">
                     <mat-option *ngFor="let item of srcType" [value]="item.value">
                       {{item.name}}
                     </mat-option>
@@ -234,16 +234,16 @@
                 </ng-template>
               </ngx-datatable-column>
 
-              <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
-              <ngx-datatable-column name="Kode" prop="code"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code"></ngx-datatable-column>
               <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
               <!--[R]-->
-              <ngx-datatable-column name="Retailer Classification" prop="retail_classification"></ngx-datatable-column>
-              <ngx-datatable-column name="SRC Classification" prop="src_classification"></ngx-datatable-column>
-              <ngx-datatable-column name="SRC Type" prop="src_type"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'call_objective.text10' | translate}}" prop="retail_classification"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'dte.audience.text14' | translate}}" prop="src_classification"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'dte.audience.text15' | translate}}" prop="src_type"></ngx-datatable-column>
               <!--[R]-->
-              <ngx-datatable-column name="Field Force" prop="ff_name" [sortable]="false"></ngx-datatable-column>
-              <ngx-datatable-column name="Daftar Ayo" prop="status">
+              <ngx-datatable-column name="{{'call_objective.text13' | translate}}" prop="ff_name" [sortable]="false"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="status">
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                   <span *ngIf="row.status === 'active' || row.status === 'inactive'">Yes</span>
                   <span *ngIf="row.status === 'not-registered'">No</span>
