--- a/src/app/pages/dte/schedule-program/dialog/list-audience-dialog.component.html
+++ b/src/app/pages/dte/schedule-program/dialog/list-audience-dialog.component.html
@@ -22,10 +22,10 @@
       [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
       [reorderable]="reorderable" [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true"
       [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" [sorts]="[{prop: 'name', dir: 'asc'}]">
-      <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
-      <ngx-datatable-column name="Kode" prop="code"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column>
+      <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code"></ngx-datatable-column>
       <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
-      <ngx-datatable-column name="Daftar Ayo" prop="status">
+      <ngx-datatable-column name="{{'dte.audience.text16' | translate}}" prop="status">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
           <span *ngIf="row.status === 'active' || row.status === 'inactive'">Yes</span>
           <span *ngIf="row.status === 'not-registered'">No</span>
