--- a/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
+++ b/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
@@ -166,7 +166,7 @@
           <div fxLayout="row wrap" fxLayoutAlign="end stretch" fxLayout.lt-md="column" class="p-16 px-24"
             fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
             <button mat-raised-button type="button" class="confirmation-button" (click)="loadFormFilter()" fxFlex="20">
-              Load Data
+              {{'dte.template_tugas.text24' | translate}}
             </button>
           </div>
 
