--- a/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-mitra-edit/pay-later-panel-mitra-edit.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-mitra-edit/pay-later-panel-mitra-edit.component.html
@@ -121,7 +121,7 @@
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
+          <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column>
           <ngx-datatable-column name="No. Ponsel" prop="phone" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.phone ? row.phone : '-'}}
