--- a/src/app/pages/settings/tingkat-fitur/index/tingkat-fitur-index.component.html
+++ b/src/app/pages/settings/tingkat-fitur/index/tingkat-fitur-index.component.html
@@ -33,7 +33,7 @@
 
         <ngx-datatable-column name="Tipe Akun" prop="type"></ngx-datatable-column>
 
-        <ngx-datatable-column name="Tanggal Dibuat" prop="created_at">
+        <ngx-datatable-column name="{{'global.label.created_at' | translate}}" prop="created_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.created_at | date:
             'dd/MM/yyyy'}}</ng-template>
         </ngx-datatable-column>
