--- a/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
+++ b/src/app/pages/user-management/private-label/panel-partnership/edit/panel-partnership-edit.component.html
@@ -344,7 +344,7 @@
                 prop="classification"
               ></ngx-datatable-column>
               <ngx-datatable-column
-                name="Retailer Classification"
+                name="{{'call_objective.text10' | translate}}"
                 prop="retail_classification"
               ></ngx-datatable-column>
               <ngx-datatable-column
@@ -356,7 +356,7 @@
                 prop="src_type"
               ></ngx-datatable-column>
               <ngx-datatable-column
-                name="Field Force"
+                name="{{'call_objective.text13' | translate}}"
                 prop="ff_name"
                 [sortable]="false"
               ></ngx-datatable-column>
