--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header contentTitle="{{ls.locale.retailer?.create?.page_title || ''}}">
+  <page-content-header contentTitle="{{'retailer.create.page_title' | translate}}">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
