translation-sprint-3-2022: - fix global.label.delete_confirm

--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -41,7 +41,7 @@
             <th nowrap>{{'global.label.code' | translate}}</th>
             <th nowrap>{{'global.label.owner_name' | translate}}</th>
             <th nowrap>{{'global.label.type' | translate}}</th>
-            <th nowrap>{{'global.label.valid'}}</th>
+            <th nowrap>{{'global.label.valid' | translate}}</th>
             <th nowrap>{{'global.messages.invalid_reason' | translate}}</th>
           </tr>
         </thead>
